tests/misc/errors/less/__snapshots__/jsfmt.spec.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inline-comment.js error test 1`] = `
"(postcss) CssSyntaxError Unknown word (5:4)
  3 | a{
  4 | 	prop
> 5 | // inline
    |    ^
  6 | :
  7 | value;
  8 | }"
`;

exports[`scss-syntax.css error test 1`] = `
"(postcss) CssSyntaxError Unknown word (1:15)
> 1 | a {content: #{$foo}}
    |               ^
  2 | "
`;
